--- a/src/components/loading/LoadingScreen.css
+++ b/src/components/loading/LoadingScreen.css
@@ -1,29 +1,50 @@
 .loading-screen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    transition: opacity 0.5s ease-in-out; /* Adiciona uma transição suave */
-    opacity: 1; /* Inicialmente visível */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 0.5s ease-in-out; 
+  opacity: 1; 
+  
+}
+
+.loading-screen.active {
+  opacity: 0; 
+}
+
+.logo-animation { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;  /* Ocupa toda a largura da tela */
+  height: auto; /* Ocupa toda a altura da tela */
+  object-fit: cover; /* Faz o vídeo cobrir toda a área, mantendo a proporção */
+}
+
+/* Responsividade para Tablets */
+@media (max-width: 834px) { 
+  .logo-animation { 
+    width: 90%;
   }
   
-  .loading-screen.active {
-    opacity: 0; /* Torna transparente quando a animação termina */
+}
+
+/* Responsividade para Celulares */
+@media (max-width: 320px) {
+  .logo-animation { 
+    width: 90%;
   }
-  
-  .logo-animation {
-    /* Estilos da logo, ajuste conforme necessário */
-    width: 200px;
-    animation: spin 2s linear infinite; /* Animação de rotação */
+}
+
+/* Responsividade para Celulares */
+@media (max-width: 414px){
+  .logo-animation { 
+    width: 90%;
   }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+}
