--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,83 +1,90 @@
 .auth-container {
-  background-color: rgb(0, 0, 0);
+  background-color: #000;
   width: 100%;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Arial', sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .auth-card {
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
-  align-items: center;
-  background-color: rgb(0, 0, 0);
-  border-radius: 10px;
+  background-color: #000;
+  border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(238, 201, 77, 0.8);
-  padding: 10px;
+  padding: 0 30px 30px;
   text-align: center;
   max-width: 400px;
   width: 90%;
 }
 
 .logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  top: 0;
 }
 
 .auth-form {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 90%;
-}
-
-.form-group {
-  display: flex;
-  position: relative;
-}
-
-.form-group input {
   width: 100%;
-  height: 100%;
+}
+
+.webflow-style-input {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  border-radius: 2px;
+  padding: 0;
+  background: rgb(122, 118, 98, 0.8);
+
+  &:after {
+    content: "";
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    z-index: 999;
+    height: 2px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    background-position: 0% 0%;
+    background: linear-gradient(to right, #d48d45, #b8712d, #d4ae4b, #c88c0b, #b8712d, #b2933f);
+    background-size: 500% auto;
+    animation: gradient 5s linear infinite;
+  }
+}
+
+.webflow-style-input input {
+  flex-grow: 1;
+  background: transparent;
+  border: none;
   outline: none;
-  padding: 0 15px;
-  font-size: 0.95rem;
-  border-radius: 3px;
-  background-color: #c4c4c4;
+  color: #d7bd79;
+  font-size: 1rem;
+  width: 100%;
+  line-height: 1rem;
+  padding: 10px;
+  vertical-align: middle;
+
+  &::placeholder {
+    /* Placeholder style */
+    color: #d7bc7976;
+  }
 }
 
-.form-group label {
-  position: absolute;
-  top: 50%;
-  left: 15px;
-  color: #151515; 
-  pointer-events: none;
-  transform: translateY(-50%);
-  transition: 0.2s ease all; 
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+
+  100% {
+    background-position: 100% 0%;
+  }
 }
 
-.form-group input:focus {
-  border-color: #252525; 
-}
-
-.form-group input:focus,
-.form-group input:not(:placeholder-shown) { 
-  padding: 16px 15px 0; 
-}
-
-.form-group input:focus ~ label,
-.form-group input:not(:placeholder-shown) ~ label {
-  top: 8px;
-  font-size: 12px;
-  left: 15px;
-  color: #212121; 
-}
 
 .btn-auth {
   padding: 12px;
@@ -88,34 +95,121 @@
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  display: block; 
-  margin: 10px auto;
-  width: 100%; 
+  margin-top: 20px;
+  font-size: 1rem;
 }
 
 .btn-auth:hover {
-  background-color: #c88c0b; 
+  background-color: #c88c0b;
 }
 
 .auth-links {
   margin-top: 20px;
   display: flex;
   justify-content: space-around;
+  font-size: 1rem;
 }
 
 .auth-links a {
-  color: rgba(218, 165, 32, 0.8); 
+  color: #daa520;
   text-decoration: none;
   font-weight: 500;
   transition: color 0.3s ease;
 }
 
 .auth-links a:hover {
-  color: #daa520;
+  color: #c88c0b;
 }
 
 .error-message {
   color: #f00;
   font-size: 14px;
   margin-top: 10px;
+}
+
+/* Responsividade para Tablets */
+@media (max-width: 834px) { 
+
+  .auth-card {
+    padding: 0 20px 20px;
+    max-width: 80%;
+    border-radius: none;
+    box-shadow: none;
+  }
+  
+  .webflow-style-input {
+    padding: 0px; /* Reduz o padding do input */
+  }
+  .webflow-style-input input {
+    font-size: 1.5rem; /* Reduz o tamanho da fonte */
+    line-height: 2.5rem;
+  }
+
+  .btn-auth{
+    font-size: 1.5rem;
+  }
+
+  .auth-links{
+    margin-top: 40px;
+    margin-bottom: 30px;
+    font-size: 1.5rem;
+  }
+}
+
+/* Responsividade para Celulares */
+@media (max-width: 320px) {
+  .auth-card {
+    padding: 0 10px 10px;
+    max-width: 85%;
+    width: 100%;
+    border-radius: none;
+    box-shadow: none;
+  }
+  
+  .webflow-style-input {
+    padding: 0px; /* Reduz o padding do input */
+  }
+  .webflow-style-input input {
+    font-size: 1.3rem; /* Reduz o tamanho da fonte */
+    line-height: 1.2rem;
+  }
+
+  .btn-auth{
+    font-size: 1.3rem;
+  }
+
+  .auth-links{
+    margin-top: 40px;
+    margin-bottom: 30px;
+    font-size: 1.3rem;
+  }
+}
+
+/* Responsividade para Celulares */
+@media (max-width: 414px){
+  .auth-card {
+    padding: 0 10px 10px;
+    max-width: 90%;
+    width: 100%;
+    border-radius: none;
+    box-shadow: none;
+  }
+  
+  .webflow-style-input {
+    padding: 0px; /* Reduz o padding do input */
+  }
+  .webflow-style-input input {
+    font-size: 1.3rem; /* Reduz o tamanho da fonte */
+    line-height: 1.5rem;
+  }
+
+  .btn-auth{
+    font-size: 1.3rem;
+  }
+
+  .auth-links{
+    margin-top: 40px;
+    margin-bottom: 30px;
+    font-size: 1.3rem;
+  }
 }
